--- a/index.html
+++ b/index.html
@@ -104,6 +104,36 @@
 			</div>
 		</div>		
 	</section>
+
+	<section style="background-color: #ffd836">
+		<div class="row h-1300 mt-100 flexbox">
+			<div class="col-2"></div>
+			<div class="col-8">
+				<h2 style="font-size: 3rem; font-weight: 800; line-height: 120px;">Event 1</h2>
+				<h2 style="font-size: 6rem; font-weight: 900;line-height: 111px; color: #2d60b1"> 인스타 속 <br>라이프스킨 </h2>
+				<h3 style="margin-top: 50px; line-height: 40px;"> 인스타에 라이프스킨 입은 사진 올리고, <br><strong>30% 할인쿠폰</strong> 받자!</h3>
+				<img src="./img/insta.png" style="width: 800px; height: auto; margin-top: 30px; margin-bottom: 70px;">
+				<h3>#라이프스킨 #라이프스킨_만능팬츠 #제로그램 #신규라인런칭 <br> #세상편안 #데일리템 </h3>
+				<p style="text-align: center; font-size: 1.2rem;" class="mt-20">라이프스킨을 입고 느낀 자신만의 생각을 해시태그로 달아주세요!</p>
+			</div>
+			<div class="col-2"></div>
+		</div>
+	</section>
+
+	<section style="background-color: #ffd836">
+		<div class="row h-1300 mt-500 flexbox">
+			<div class="col-2"></div>
+			<div class="col-8">
+				<h2 style="font-size: 3rem; font-weight: 800; line-height: 120px;">Event 2</h2>
+				<h2 style="font-size: 6rem; font-weight: 900;line-height: 111px; color: #2d60b1"> 라이프스킨 <br>오행시 </h2>
+				<h3 style="margin-top: 50px; line-height: 40px;"> 인스타에 라이프스킨으로 오행시하고, <br><strong>쏘리어스 뱃지</strong> 받자!</h3>
+				<img src="./img/sorry.png" style="width: 800px; height: auto; margin-top: 30px; margin-bottom: 70px;">
+				<h3>#라이프스킨 #라이프스킨_오행시 #제로그램 <br>#라이프웨어 #에슬레져룩 #신규라인런칭</h3>
+				<p style="text-align: center; font-size: 1.2rem;" class="mt-20">라이프스킨 게시물을 리그램하고 오행시를 써주세요! 추첨을 통해 5분께 쏘리어스 뱃지를 드립니다.</p>
+			</div>
+			<div class="col-2"></div>
+		</div>
+	</section>
 </body>
 <footer></footer>
 </html>
